tests/baselines/reference/Protected1.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected1.ts(1,1): error TS1044: 'protected' modifier cannot appear on a module or namespace element.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected1.ts (1 errors) ====
    protected class C {
    ~~~~~~~~~
!!! error TS1044: 'protected' modifier cannot appear on a module or namespace element.
    }